뭐하지 할꺼 없어요

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     </div>
                 </div>
             </section>
+            <h6>뭐하지 할꺼 없어요</h6>
             <hr class="m-0" />
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
