--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">홈</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#profile">프로필</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#computer">컴퓨터 사양</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Gear">주변 장비</a></li>
                 </ul>
@@ -46,7 +47,7 @@
                     <span style="color: #ff0000;">코카콜라!</span>
                     </div>
                     <div class="mail">
-                        <a href="mailto:ploneer0315@gmail.com">ploneer0315@gmail.com</a>
+                        <a href="mailto:cola@korea-cocacola.xyz">cola@korea-cocacola.xyz</a>
                     </div>
                     <p class="lead mb-5">안녕하세요! 저는 콜라입니다! 저는 홀로라이브와 이세계아이돌을 좋아하고, 취미로 지진관측도 하고 있습니다!</p>
                     <div class="social-icons">
@@ -56,6 +57,37 @@
                         <a class="social-icon" href="https://discordapp.com/users/500417144467488780"><i class="fa-brands fa-discord"></i></a>
                     </div>
                 </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="profile">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">프로필</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">닉네임</h3>
+                            <div class="subheading mb-3">콜라</div>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0">생년월일</h3>
+                                <div class="subheading mb-3">2010/03/15</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">거주지</h3>
+                            <div class="subheading mb-3">대한민국 경기도 남양주시 진접읍</div>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5" style="margin-right: 50px;">
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0">MBTI</h3>
+                                <div class="subheading mb-3">ESTJ</div>
+                            </div>
+                        </div>    
+                    </div>                
             </section>
             <hr class="m-0" />
             <!-- Experience-->
@@ -128,7 +160,6 @@
                     </div>
                 </div>
             </section>
-            <h6>뭐하지 할꺼 없어요</h6>
             <hr class="m-0" />
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
