--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>콜라</title>
+        <meta content="콜라" property="og:title" />
+        <meta content="안녕하세요 콜라입니다!" property="og:description" />
+        <meta content="https://korea-cocacola.xyz" property="og:url" />
+        <meta content="assets/img/profile.jpg" property="og:image" />
+        <meta content="#ff6363" data-react-helmet="true" name="theme-color" />
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.jpg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
