--- a/EarthQuake.html
+++ b/EarthQuake.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>리디렉션 페이지</title>
+  <title>콜라 - 지진 관측</title>
   <script>
     setTimeout(function() {
       window.location.href = "https://cola-earthquake.notion.site/92341a499310497ca1055894825ce102";
