--- a/jishin.html
+++ b/jishin.html
@@ -5,7 +5,7 @@
   <title>지진계</title>
   <script>
     setTimeout(function() {
-      window.location.href = "http://www.nyj36.xyz:8080/pcho/";
+      window.location.href = "http://www.nyj36.xyz:8080/jjup/";
     }, 1); // 1972초 후에 리디렉션 실행
   </script>
 </head>
