--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a class="social-icon" href="https://youtube.com/@KoreaCocacola"><i class="fa-brands fa-youtube"></i></a>
                         <a class="social-icon" href="https://youtube.com/@COLA_EarthQuake"><i class="fa-brands fa-youtube"></i></a>
                         <a class="social-icon" href="https://twitter.com/KoreaCocacola"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://discordapp.com/users/500417144467488780"><i class="fa-brands fa-discord"></i></a>
+                        <a class="social-icon" href="discord://discord.com/users/500417144467488780"><i class="fa-brands fa-discord"></i></a>
                     </div>
                 </div>
             </section>
