--- a/index.html
+++ b/index.html
@@ -54,15 +54,11 @@
                     <div class="mail">
                         <a href="mailto:cola@korea-cocacola.xyz">cola@korea-cocacola.xyz</a>
                     </div>
-                    <p class="lead mb-5">안녕하세요! 저는 콜라입니다! 저는 홀로라이브와 이세계아이돌을 좋아하고, 취미로 지진관측도 하고 있습니다!</p>
+                    <p class="lead mb-5">안녕하세요! 저는 콜라입니다! 저는 버추얼 유튜버를 좋아하고, 취미로 지진관측도 하고 있습니다!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://youtube.com/@KoreaCocacola"><i class="fa-brands fa-youtube"></i></a>
                         <a class="social-icon" href="https://youtube.com/@COLA_EarthQuake"><i class="fa-brands fa-youtube"></i></a>
-<<<<<<< HEAD
-                        <a class="social-icon" href="https://twitter.com/KoreaCocacola"><i class="fab fa-twitter"></i></a>
-=======
                         <a class="social-icon" href="https://www.twitch.tv/korea_cocacola"><i class="fa-brands fa-twitch"></i></a>
->>>>>>> 6971ac74b5d48003f3e56110106196d44ed9ed75
                         <a class="social-icon" href="discord://discord.com/users/500417144467488780"><i class="fa-brands fa-discord"></i></a>
                     </div>
                 </div>
