--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="mail">
                         <a href="mailto:cola@korea-cocacola.xyz">cola@korea-cocacola.xyz</a>
                     </div>
-                    <p class="lead mb-5">안녕하세요! 저는 콜라입니다! 저는 버추얼 유튜버를 좋아하고, 취미로 지진관측도 하고 있습니다!</p>
+                    <p class="lead mb-5">안녕하세요! 저는 콜라입니다! 저는 버츄얼 유튜버를 좋아하고, 취미로 지진관측도 하고 있습니다!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://youtube.com/@KoreaCocacola"><i class="fa-brands fa-youtube"></i></a>
                         <a class="social-icon" href="https://youtube.com/@COLA_EarthQuake"><i class="fa-brands fa-youtube"></i></a>
