--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://youtube.com/@KoreaCocacola"><i class="fa-brands fa-youtube"></i></a>
                         <a class="social-icon" href="https://youtube.com/@COLA_EarthQuake"><i class="fa-brands fa-youtube"></i></a>
-                        <a class="social-icon" href="https://www.twitch.tv/korea_cocacola"><i class="fa-brands fa-twitch"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/koreacocacola"><i class="fa-brands fa-instagram"></i></a>
                         <a class="social-icon" href="discord://discord.com/users/500417144467488780"><i class="fa-brands fa-discord"></i></a>
                     </div>
                 </div>
