--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5" style="margin-right: 50px;">
                             <div class="flex-grow-1">
                                 <h3 class="mb-0">MBTI</h3>
-                                <div class="subheading mb-3">ESTJ</div>
+                                <div class="subheading mb-3">ISTJ</div>
                             </div>
                         </div>    
                     </div>                
