--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                                <br>
                                MAINBOARD : GIGABYTE GA-B85M-D2V (rev. 2.0)
                                <Br>
-                               SSD : SAMSUNG 850 PRO 
+                               SSD : SAMSUNG 850 PRO
+                               <br>
+                               GRAPHIC CARD : COLORFUL GEFORCE GTX 750 TI 1G 
                             </p>
                         </div>
                     </div>
