장비 정보 수정

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5" style="margin-right: 50px;">
                             <div class="flex-grow-1">
                                 <h3 class="mb-0">MBTI</h3>
-                                <div class="subheading mb-3">ISTJ</div>
+                                <div class="subheading mb-3">ESTJ</div>
                             </div>
                         </div>    
                     </div>                
@@ -119,15 +119,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">방송컴 사양</h3>
                             <br>
-                            <p>CPU : Intel i5 4460
+                            <p>CPU : AMD Ryzen 5600G
                                 <br>
-                               RAM : SAMSUNG DDR3-1600 (16GB (8GBX2))
+                               RAM : SAMSUNG DDR4-3200 (16GB (8GBX2))
                                <br>
-                               MAINBOARD : GIGABYTE GA-B85M-D2V (rev. 2.0)
+                               MAINBOARD : ASUS Prime A520M-A ii
                                <Br>
                                SSD : SAMSUNG 850 PRO
                                <br>
-                               GRAPHIC CARD : COLORFUL GEFORCE GTX 750 TI 1G 
+                               GRAPHIC CARD : AMD Ryzen 5600G 내장 그래픽
                             </p>
                         </div>
                     </div>
@@ -153,15 +153,15 @@
                                 <br>
                                 서브 모니터 : 주연테크 22인치 V22FE
                                 <Br>
-                                공유기 : IPTIME A804NS-MU
+                                공유기 : KT WiFi Wave 2
                                 <br>
                                 모니터 암 : 카멜 BMA-2
                                 <br>
                                 이어폰 : Apple Earpods
                                 <br>
-                                무선 이어폰 : SAMSUNG Buds2 Pro
+                                무선 이어폰 : Apple Airpods Pro (Gen 1)
                                 <br>
-                                핸드폰 : SAMSUNG A90 5G
+                                핸드폰 : Apple Iphone 14 Pro
                             </p>
                         </div>
                     </div>
