--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <br>
                                 서브 모니터 : 주연테크 22인치 V22FE
                                 <Br>
-                                공유기 : KT WiFi Wave 2
+                                공유기 : ipTIME AX3004BCM
                                 <br>
                                 모니터 암 : 카멜 BMA-2
                                 <br>
